# projet-zz2

./: .gitignore  README.md
program/: AST.cpp  AST.hpp  CMakeLists.txt  Makefile  README.md  checks.cpp  checks.hpp  lexer.hpp  main_cpp.l  main_cpp.y  test.prog  test1.cpp  test2.txt
program/AST/: AST.cpp  AST.hpp  Program.cpp  Program.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp  Types.cpp  Types.hpp  changlog.md
program/errorManager/: ErrorManager.cpp  ErrorManager.hpp
program/preprocessor/: preprocessor.cpp  preprocessor.hpp  result.prog  test.cpp
program/preprocessor/test/: main.prog  paf.prog  pif.prog
program/symtable/: ContextManager.cpp  ContextManager.hpp  README.md  Symbol.cpp  Symbol.hpp  Symtable.cpp  Symtable.hpp  symtable.cpp  symtable.hpp
program/tests/: factorial.prog  fib.prog  hello-world.prog  operations.prog  test-arr.prog  test-comment.prog  test-errors.prog  test-forrange.prog  test-funcalls.prog  test-multiple-definition.prog  test-multiple-definition2.prog  test-set.prog
program/tests/test-include/: main.prog  test-same.prog
program/tests/test-include/intest/: test-sub.prog
program/transpiler/: Transpiler.cpp  Transpiler.hpp
rapport/: Makefile  notes.md  rapport.tex  refs.bib  titlepage.tex  webrefs.bib
ressources/: syntax.ebnf
ressources/diagrams/: Type.uml  all.uml  ast.uml  binaryOp.uml  contextManager.uml  elts.uml  errMgr.uml  memory.uml  node.uml  program-builder.uml  stmts.uml  symbol.uml  symtable.uml  symtable2.uml  typedelts.uml  value.uml
ressources/graph/: add3.dot
tests/test-flex/: Makefile  main_cpp.l
tests/test-flex-bison/: Makefile  README.md  lexer.hpp  main_cpp.l  main_cpp.y  test.prog
(+17 files in other folders)
